# CLIStatus

./: README.md  pyproject.toml
CLIStatus/: __init__.py  main.py
