[project]
name = "clistatus"
version = "0.1.5"
description = "Lightweight CLI utility to check weather and monitor system status (RAM, CPU, Disk)."
authors = [{ name = "vxid-dev" }]
requires-python = ">=3.8"

dependencies = [
    "requests",
    "colorama",
    "psutil"
]

[project.scripts]
clistatus = "CLIStatus.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
